--- a/handson1/cortex_handson_seminar_part1.ipynb
+++ b/handson1/cortex_handson_seminar_part1.ipynb
@@ -1112,7 +1112,7 @@
     "    select\n",
     "        *,\n",
     "        AI_COMPLETE(\n",
-    "            model => 'claude-3-5-sonnet',\n",
+    "            model => 'openai-gpt-4.1',\n",
     "            prompt => concat('あなたは、二つの異なる名前の商品が入力された情報を元に同じかどうかを判定するスペシャリストです。\n",
     "                        次のルールに従って結果を出力してください。\n",
     "                        1. 類似度のスコアを0から1でNumericな値で返すこと。 0が異なる製品で、1が同一製品を指す。\n",
@@ -1136,7 +1136,9 @@
     "                                'type': 'string',\n",
     "                                'description': 'スコアの理由'\n",
     "                            }\n",
-    "                        }\n",
+    "                        },\n",
+    "                    'required': ['score','reason'],\n",
+    "                    'additionalProperties': false\n",
     "                    }\n",
     "            } \n",
     "    ) as result_json\n",
