--- a/handson1/cortex_handson_seminar_part1.ipynb
+++ b/handson1/cortex_handson_seminar_part1.ipynb
@@ -901,7 +901,7 @@
     "\n",
     "\n",
     "\n",
-    "ここでは、Snowflake Cortexの関数の一つである**Complete**関数を利用し、Anthropic社の**openai-gpt-4.1**モデルでメーカーと商品名を分離する。また、出力形式を統一するために、**Cortex Complete Structure Output**の機能を利用し、JSON形式で結果を出力させる。\n",
+    "ここでは、Snowflake Cortexの関数の一つである**Complete**関数を利用し、OpenAI社の**openai-gpt-4.1**モデルでメーカーと商品名を分離する。また、出力形式を統一するために、**Cortex Complete Structure Output**の機能を利用し、JSON形式で結果を出力させる。\n",
     "\n",
     "***皆さんがSQLを書くところです***"
    ]
